Tue Jul 16 11:37:41 1996  Ian Lance Taylor  <ian@cygnus.com>

	* client.h (file_gzip_level): Declare.
	* client.c (file_gzip_level): Define.
	(start_server): Don't set gzip_level to zero after sending
	Gzip-stream command.  Set file_gzip_level after sending
	gzip-file-contents command.
	(send_modified): Use file_gzip_level rather than gzip_level.
	* server.c (server_updated): Likewise.
	(serve_gzip_contents): Likewise.

	* sanity.sh (patch): New tests.  Test remote CVS handling of
	unpatchable files.

	* sanity.sh (death2): Accept a '.' in the temporary file name
	printed by diff.

	* rcscmds.c (RCS_checkin): Remove noerr parameter.  Change all
	callers.
	* cvs.h (RCS_checkin): Update declaration.
	* commit.c (remove_file): Pass RCS_FLAGS_QUIET to RCS_checkin.

	* history.c (history): Cast sizeof to int to use correct type in
	error printf string.
	(report_hrecs): Cast strlen result to int to use correct type in
	printf string.

	* server.c (cvs_flusherr): Correct typo in comment.

	* rcs.c (getrcskey): Hoist three constant strcmp calls out of the
	value reading loop.

	* fileattr.c (fileattr_get): Change parameter types from char * to
 	const char *.
	(fileattr_get0, fileattr_modify, fileattr_set): Likewise.
	(fileattr_newfile): Likewise.
	* fileattr.h (fileattr_get): Update declaration.
	(fileattr_get0, fileattr_modify, fileattr_set): Likewise.
	(fileattr_newfile): Likewise.

Thu May 16 11:12:18 1996  Mark P. Immel <immel@radix.net>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.h, client.c, checkout.c (client_send_expansions):
	Pass an additional parameter indicating where the checkout is
	to occur, to avoid passing the wrong information to send_files().
	* sanity.sh (basicb): New test basicb-cod-1 tests for above fix.

Mon Jul 15 18:26:56 1996  Ian Lance Taylor  <ian@cygnus.com>

	* recurse.c (do_recursion): Require a repository before calling
	Find_Names.
	* repos.c (Name_Repository): Remove sanity checks which spend time